Randomly Generated Tile Functionality

--- a/index.html
+++ b/index.html
@@ -25,14 +25,7 @@
                     </form>
                 </div>
                 <div class="col-xs-12 col-md-12" id="rackwrap">
-                    <div id="tilerack" class="ui-widget-header">
-                        <img src="images/Scrabble_Tile_R.jpg" id="testTile1" class="tles ui-widget-content">
-                        <img src="images/Scrabble_Tile_T.jpg" id="testTile2" class="tles ui-widget-content">
-                        <img src="images/Scrabble_Tile_J.jpg" id="testTile3" class="tles ui-widget-content">
-                        <img src="images/Scrabble_Tile_S.jpg" id="testTile4" class="tles ui-widget-content">
-                        <img src="images/Scrabble_Tile_W.jpg" id="testTile5" class="tles ui-widget-content">
-                        <img src="images/Scrabble_Tile_J.jpg" id="testTile6" class="tles ui-widget-content">
-                    </div>
+                    <div id="tilerack" class="ui-widget-header"></div>
                 </div>
             </div>
         </div>
