--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
                 <div class="col-xs-12 col-md-12" id="title">Scrabble</div>
                 <div class="col-xs-12 col-md-12" id="board"></div>
                 <div class="col-xs-12 col-md-12" id="dialog">
-                    <div id="score"></div>
-                    <div id="validWord"></div>
+                    <div id="totalscore">Total Score : --</div>
+                    <div id="score">Score : --</div>
+                    <div id="validWord">Valid: --</div>
                 </div>
                 <div class="col-xs-12 col-md-12" id="togglebtns">
                     <form>
