--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="col-xs-12 col-md-12" id="togglebtns">
                     <form>
                         <button type = "button" class="btn btn-outline-dark pl-4 pr-4 mb-2 mr-1" id = "next-btn">Next Word</button>
-                        <button type = "button" class="btn btn-outline-dark pl-4 pr-4 mb-2" id = "reset-btn">Reset</button>
+                        <button type = "button" class="btn btn-outline-dark pl-4 pr-4 mb-2" id = "reset-btn">Start / Reset</button>
                     </form>
                 </div>
                 <div class="col-xs-12 col-md-12" id="rackwrap">
