--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
                 <div class="col-xs-12 col-md-12" id="dialog">
                     <div id="totalscore">Total Score : --</div>
                     <div id="score">Score : --</div>
+                    <div id="tilesleft">Tiles Left: 100</div>
                     <div id="validWord">Valid: --</div>
+
                 </div>
                 <div class="col-xs-12 col-md-12" id="togglebtns">
                     <form>
                         <button type = "button" class="btn btn-outline-dark pl-4 pr-4 mb-2 mr-1" id = "next-btn">Next Word</button>
-                        <button type = "button" class="btn btn-outline-dark pl-4 pr-4 mb-2" id = "reset-btn">Start / Reset</button>
+                        <button type = "button" class="btn btn-outline-dark pl-4 pr-4 mb-2" id = "reset-btn">Reset</button>
                     </form>
                 </div>
                 <div class="col-xs-12 col-md-12" id="rackwrap">
@@ -30,7 +32,7 @@
                 </div>
             </div>
         </div>
-        <script src="./js/board.js"></script>
+        <!-- <script src="./js/board.js"></script> -->
         <script src="./js/hw5.js"></script>
     </body>
 </html>
