--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!--
+File: index.html
+GUI Assignment: Scrabble Game
+Raj Vekeria, UMass Lowell Computer Science, rvekeria@cs.uml.edu
+Copyright (c) 2021 by Raj. All rights reserved. May be freely copied or
+excerpted for educational purposes with credit to the author.
+updated by RV on December 15, 2021 at 2:52 PM
+*/-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -18,8 +26,6 @@
                     <div id="totalscore">Total Score : --</div>
                     <div id="score">Rolling Score : --</div>
                     <div id="tilesleft">Tiles Left: 100</div>
-            <!--    <div id="validWord">Valid: --</div> -->
-
                 </div>
                 <div class="col-xs-12 col-md-12" id="togglebtns">
                     <form>
